# camera-perception-system

./: .env.example  .gitignore  APPLE_SILICON_OPTIMIZATION.md  DEBUG_REPORT.md  DELIVERY.md  Dockerfile  OPTIMIZATION_COMPLETE.md  README.md  START_M5_PRO.md  STATUS_REPORT.md  USAGE.md  debug_start.sh  docker-compose.yml  install_m5.sh  monitor_server.py  optimize_script.py  pyproject.toml  pytest.ini  quick_install.sh  requirements.txt  run.sh  run_server.py  start.bat  start.sh  start_and_monitor.py  start_m5_optimized.sh  start_server.sh
configs/: camera.yaml  camera_apple_silicon.yaml
docs/: OPTIMIZATION_PLAN.md
models/: .gitignore  hand_landmarker.task
recordings/: recording_20260321_225711.json  recording_20260321_225714.json  recording_20260322_100958.json
refs/: BEVFusion_参考文档.md
scripts/: capture_calibration_images.py
src/: __init__.py
src/algorithms/: __init__.py  action_recognition.py  alert_system.py  async_processor.py  auth_system.py  calibration.py  calibration_gui.py  cloud_sync.py  collaboration.py  config_manager.py  coreml_export.py  dashboard.py  data_analysis.py  data_recorder.py  deployment.py  depth_anything_v2.py  depth_calibration.py  depth_enhanced_estimation.py  depth_estimator.py  detection.py  detection_enhanced.py  detection_mps.py  edge_computing.py  face_analysis.py  fall_detection.py  (+17 more)
tests/: conftest.py  test_algorithms.py  test_api.py  test_calibration.py  test_detection.py  test_e2e.py  test_integration.py  test_performance.py  test_spatial.py
web/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
(+31 files in other folders)
